# api/swagger.json
@@ -14,9 +14,9 @@
   "securityDefinitions": {
     "OAuth2": {
       "type": "oauth2",
-      "flow": "implicit",
-      "authorizationUrl": "api/v1/auth",
-      "description": "Implicit oauth2 flow with one request for authentication and grant type - 'implicit'",
+      "flow": "password",
+      "tokenUrl": "api/v1/signin",
+      "description": "Password oauth2 flow with one request for authentication and grant type - 'password'",
       "scopes": {
         "read": "Grants access to read information",
         "write": "Grants access to write information",
@@ -42,14 +42,14 @@
       "name": "startDate",
       "required": false,
       "type": "string",
-      "description": "Start date filter for pagination. Should be bigger or equal to end timestamp if used. Is ISO 8601 UTC timestamp."
+      "description": "Start date filter for pagination. Should be bigger or equal to end timestamp if used. Is ISO 8601 timestamp."
     },
     "EndDate": {
       "in": "query",
       "name": "endDate",
       "required": false,
       "type": "string",
-      "description": "End date filter for pagination. Should be smaller or equal then start timestamp if used. Is ISO 8601 UTC timestamp."
+      "description": "End date filter for pagination. Should be smaller or equal then start timestamp if used. Is ISO 8601 timestamp."
     },
     "MinRating": {
       "in": "query",
@@ -258,7 +258,7 @@
           "in": "path",
           "required": true,
           "description": "ID of feedback that we want to get",
-          "type": "string"
+          "type": "integer"
         }
       ],
       "get": {
@@ -382,14 +382,14 @@
     "Feedback": {
       "required": [
         "rating",
-        "playerSessionId"
+        "userSessionId"
       ],
       "properties": {
         "id": {
           "type": "integer",
           "uniqueItems": true
         },
-        "playerSessionId": {
+        "userSessionId": {
           "type": "integer",
           "uniqueItems": true
         },
